--- a/cliradio.ini
+++ b/cliradio.ini
@@ -1,6 +1,6 @@
 
 
-!nradio{TOPRadio Be}{http://lb.topradio.be/topradio.mp3}
+!nradio;Genre;{TOPRadio Be}{http://lb.topradio.be/topradio.mp3}
 !nradio{France Info 128}{http://direct.franceinfo.fr/live/franceinfo-midfi.mp3}
 !nradio{Mylene Farmer radio}{http://listen.radionomy.com/mylenefarmerwebradio}
 !nradio{kronehit radio}{}{http://onair-ha1.krone.at/kronehit-hd.mp3.m3u}
