--- a/cliradio.ini
+++ b/cliradio.ini
@@ -1,8 +1,16 @@
 
-
+#################################
+!nradio;News;;{France Info 128}{http://direct.franceinfo.fr/live/franceinfo-midfi.mp3}
+!nradio;News;;{bbc news}{http://bbcwssc.ic.llnwd.net/stream/bbcwssc_mp1_ws-einws}
+#################################
 !nradio;Genre;{TOPRadio Be}{http://lb.topradio.be/topradio.mp3}
-!nradio{France Info 128}{http://direct.franceinfo.fr/live/franceinfo-midfi.mp3}
-!nradio{Mylene Farmer radio}{http://listen.radionomy.com/mylenefarmerwebradio}
+#################################
+!nradio;France;;;{RTL2}        {http://icecast.rtl2.fr/rtl2-1-48-72.aac}
+!nradio;France;;;{FrBleuNord}  {http://listen.radionomy.com/FranceBleuNord947FM}
+#################################
 !nradio{kronehit radio}{}{http://onair-ha1.krone.at/kronehit-hd.mp3.m3u}
+#################################
+!nradio;NET Radionomy Pop;;{Mylene Farmer radio}{http://listen.radionomy.com/mylenefarmerwebradio}
+#################################
 
 
