--- a/cliradio.ini
+++ b/cliradio.ini
@@ -12,5 +12,6 @@
 #################################
 !nradio;NET Radionomy Pop;;{Mylene Farmer radio}{http://listen.radionomy.com/mylenefarmerwebradio}
 #################################
+!nradio;net fr;{}{http://rockfrancais.stream.ouifm.fr/ouifmrockfrancais.mp3}
 
 
